cmake_minimum_required(VERSION 3.10)
project(algorithm_learning_code C CXX)

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(array_simple_move_zeroes_c array_simple_move_zeroes/solution.c)
add_executable(array_simple_move_zeroes_cpp array_simple_move_zeroes/solution.cpp)
add_executable(array_simple_binary_search_c array_simple_binary_search/solution.c)
add_executable(array_simple_binary_search_cpp array_simple_binary_search/solution.cpp)

add_executable(array_medium_min_subarray_len_c array_medium_min_subarray_len/solution.c)
add_executable(array_medium_min_subarray_len_cpp array_medium_min_subarray_len/solution.cpp)
add_executable(array_medium_rotate_array_c array_medium_rotate_array/solution.c)
add_executable(array_medium_rotate_array_cpp array_medium_rotate_array/solution.cpp)

add_executable(linked_list_simple_reverse_c linked_list_simple_reverse/solution.c)
add_executable(linked_list_simple_reverse_cpp linked_list_simple_reverse/solution.cpp)
add_executable(linked_list_simple_delete_node_c linked_list_simple_delete_node/solution.c)
add_executable(linked_list_simple_delete_node_cpp linked_list_simple_delete_node/solution.cpp)

add_executable(linked_list_medium_cycle_entry_c linked_list_medium_cycle_entry/solution.c)
add_executable(linked_list_medium_cycle_entry_cpp linked_list_medium_cycle_entry/solution.cpp)
add_executable(linked_list_medium_merge_two_lists_c linked_list_medium_merge_two_lists/solution.c)
add_executable(linked_list_medium_merge_two_lists_cpp linked_list_medium_merge_two_lists/solution.cpp)

add_executable(queue_simple_circular_queue_c queue_simple_circular_queue/solution.c)
add_executable(queue_simple_circular_queue_cpp queue_simple_circular_queue/solution.cpp)
add_executable(queue_simple_queue_using_stacks_c queue_simple_queue_using_stacks/solution.c)
add_executable(queue_simple_queue_using_stacks_cpp queue_simple_queue_using_stacks/solution.cpp)

add_executable(queue_medium_sliding_window_max_c queue_medium_sliding_window_max/solution.c)
add_executable(queue_medium_sliding_window_max_cpp queue_medium_sliding_window_max/solution.cpp)
add_executable(queue_medium_bfs_grid_c queue_medium_bfs_grid/solution.c)
add_executable(queue_medium_bfs_grid_cpp queue_medium_bfs_grid/solution.cpp)

add_executable(stack_simple_valid_parentheses_c stack_simple_valid_parentheses/solution.c)
add_executable(stack_simple_valid_parentheses_cpp stack_simple_valid_parentheses/solution.cpp)
add_executable(stack_simple_min_stack_c stack_simple_min_stack/solution.c)
add_executable(stack_simple_min_stack_cpp stack_simple_min_stack/solution.cpp)

add_executable(stack_medium_daily_temperatures_c stack_medium_daily_temperatures/solution.c)
add_executable(stack_medium_daily_temperatures_cpp stack_medium_daily_temperatures/solution.cpp)
add_executable(stack_medium_eval_rpn_c stack_medium_eval_rpn/solution.c)
add_executable(stack_medium_eval_rpn_cpp stack_medium_eval_rpn/solution.cpp)
